# ovirt-host-deploy

./: .gitignore  .ovirtci.yaml  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.environment  README.localization  README.md  configure.ac  ovirt-host-deploy-offline.spec.in  ovirt-host-deploy.spec.in
automation/: build-artifacts-manual.sh  build-artifacts.packages  build-artifacts.packages.el7  build-artifacts.repos  build-artifacts.sh  check-merged.packages  check-merged.repos  check-merged.sh  check-patch.packages  check-patch.packages.el7  check-patch.packages.el8  check-patch.repos  check-patch.repos.el7  check-patch.repos.el8  check-patch.sh  coverage.rc  functional.expect  index.html
conf.d/: Makefile.am
po/: POTFILES.in  pt_BR.po
src/: Makefile.am
src/interface-3/: Makefile.am  setup
src/java/: Makefile.am  pom.xml.in
src/ovirt_host_deploy/: Makefile.am  __init__.py  config.py.in  constants.py  hardware.py
src/ovirt_host_mgmt/: Makefile.am  __init__.py  config.py.in  constants.py
src/plugins/: Makefile.am
src/plugins/ovirt-host-common/: Makefile.am
src/plugins/ovirt-host-common/cockpit/: Makefile.am  __init__.py  packages.py
src/plugins/ovirt-host-common/core/: Makefile.am  __init__.py  misc.py
src/plugins/ovirt-host-common/hosted-engine/: Makefile.am  __init__.py  configureha.py  packages.py
src/plugins/ovirt-host-common/vdsm/: Makefile.am  pki.py
src/plugins/ovirt-host-common/vmconsole/: Makefile.am  __init__.py  pki.py
src/plugins/ovirt-host-deploy/: Makefile.am
src/plugins/ovirt-host-deploy/cockpit/: Makefile.am  __init__.py  cockpit.py
src/plugins/ovirt-host-deploy/collectd/: Makefile.am  __init__.py  packages.py
src/plugins/ovirt-host-deploy/core/: Makefile.am  __init__.py  misc.py  offlinepackager.py
src/plugins/ovirt-host-deploy/fluentd/: Makefile.am  __init__.py  packages.py
src/plugins/ovirt-host-deploy/gluster/: Makefile.am  __init__.py  glusterpmd.py  nrpe.py  packages.py
src/plugins/ovirt-host-deploy/host/: Makefile.am  __init__.py  packages.py
src/plugins/ovirt-host-deploy/kdump/: Makefile.am  __init__.py  packages.py
src/plugins/ovirt-host-deploy/kernel/: Makefile.am  __init__.py  kernel.py
src/plugins/ovirt-host-deploy/node/: Makefile.am  __init__.py  detect.py  persist.py  vdsm_reg.py
src/plugins/ovirt-host-deploy/openstack/: Makefile.am  __init__.py  neutron.py  neutron_linuxbridge.py  neutron_openvswitch.py
src/plugins/ovirt-host-deploy/tune/: Makefile.am  __init__.py  iosched.py  ovirt-iosched.rules  tuned.py
src/plugins/ovirt-host-deploy/vdsm/: Makefile.am  __init__.py  bridge.py  config.py  hardware.py  metrics.py  packages.py  pki.py  software.py  tuned.py  vdsmid.py
src/plugins/ovirt-host-deploy/vdsmhooks/: Makefile.am  __init__.py  hooks.py
src/plugins/ovirt-host-deploy/vmconsole/: Makefile.am  __init__.py  packages.py  pki.py
src/plugins/ovirt-host-mgmt/: Makefile.am
src/plugins/ovirt-host-mgmt/core/: Makefile.am  __init__.py  misc.py  offlinepackager.py
tests/: Makefile.am  test-bundle.sh
